Remove the date from the permalink structure.
This will make it easier to setup redirects from the old location.

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description:         ""
 baseurl:             ""
 url:                 "https://matthewspencer.github.io"
 
-permalink:           /:year/:month/:day/:title/
+permalink:           /:title/
 relative_permalinks: true
 
 markdown:            kramdown
